--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
+    "lib0": "^0.2.115",
     "lucide-react": "^0.559.0",
     "perfect-freehand": "^1.2.2",
     "react": "^18.2.0",
@@ -33,7 +34,11 @@
     "roughjs": "^4.6.6",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "y-codemirror": "^3.0.1",
+    "y-monaco": "^0.1.6",
+    "y-protocols": "^1.0.7",
+    "yjs": "^13.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
