--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
+    "nodemailer": "^7.0.12",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "python-shell": "^5.0.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
