--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "python-shell": "^5.0.0",
+    "resend": "^6.6.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "winston": "^3.19.0",
