--- a/server/package.json
+++ b/server/package.json
@@ -19,11 +19,10 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
-    "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "python-shell": "^5.0.0",
-    "resend": "^6.6.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "winston": "^3.19.0",
